[package]
name = "modules_ex_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tungstenite = {version ="0.20.1",features = ["native-tls"]}
url = "2.2.2"
serde_json = "1.0.66"
serde = { version = "1.0.66", features = ["derive"] }
dotenv = "0.15.0"